--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "crafting"
   ],
   "dependencies": {
-    "voxel-inventory-dialog": "~0.3.0",
+    "voxel-inventory-dialog": "^0.4.1",
     "inventory": "~0.1.1",
     "itempile": "~0.2.1",
     "inventory-window": "^0.3.0",
