--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "voxel-inventory-crafting",
   "description": "player crafting inventory dialog (voxel.js plugin)",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "main": "inventory-crafting.coffee",
   "repository": {
     "type": "git",
@@ -22,7 +22,9 @@
     "ever": "0.0.3"
   },
   "browserify": {
-    "transform": [ "coffeeify" ]
+    "transform": [
+      "coffeeify"
+    ]
   },
   "license": "MIT"
 }
